src/objects/EmailMessage/validationRules/CH_Casehastobeassigned.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Casehastobeassigned</fullName>
    <active>true</active>
    <description>(US:13241) Case has to be assigned prior to sending emails</description>
    <errorConditionFormula>AND ( 
	Parent.CreatedDate!=Parent.LastModifiedDate,
 Parent.CH_RecordTypeCheck__c,  
 ISBLANK(Parent.CH_AssignedDate__c)
)</errorConditionFormula>
    <errorDisplayField>CH_Email_ActualTimestamp__c</errorDisplayField>
    <errorMessage>Related Incident/Problem has to be assigned prior to sending an email</errorMessage>
</ValidationRule>