src/objects/EmailMessage/validationRules/CH_CIR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_CIR</fullName>
    <active>true</active>
    <description>(US:12084) To ensure multiple CIRs are not sent out when the status is Pending Customer</description>
    <errorConditionFormula>AND(
ISPICKVAL(CH_Email_Type__c,&quot;Customer Information Request&quot;),
ISPICKVAL(Parent.Status,&quot;Pending Customer&quot;) 
)</errorConditionFormula>
    <errorMessage>There is still an outstanding CIR. You can use Email Type &quot;Update&quot; to send additional information.</errorMessage>
</ValidationRule>