src/objects/EmailMessage/validationRules/CH_CIRwhenDeferralStatusIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_CIRwhenDeferralStatusIsActive</fullName>
    <active>true</active>
    <description>A CIR cannot be send when deferral status is Active (US: 20389)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Customer Information Request&quot;), 
ISPICKVAL( Parent.CH_DeferralStatus__c, &quot;Active&quot;) 
)</errorConditionFormula>
    <errorMessage>Customer Information Requests cannot be sent out when Deferral Status is Active</errorMessage>
</ValidationRule>