src/objects/EmailMessage/validationRules/CH_CIRwhenSolutionProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_CIRwhenSolutionProvided</fullName>
    <active>true</active>
    <description>A CIR cannot be send when status is Solution Provided (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Customer Information Request&quot;), 
ISPICKVAL(Parent.Status, &quot;Solution Provided&quot;) 
)</errorConditionFormula>
    <errorMessage>A CIR cannot be send when the Case Status is Solution Provided</errorMessage>
</ValidationRule>