src/objects/EmailMessage/validationRules/CH_DontAllowRestorewhenNotIncident.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_DontAllowRestorewhenNotIncident</fullName>
    <active>true</active>
    <description>(US:12084) This validation rule will ensure that a Restore Email can only be send when the Record Type is a Nokia Incident with Restoration (0121F000000Bj7JQAS)</description>
    <errorConditionFormula>AND(NOT(Parent.RecordType.Name=&quot;Nokia Incident with Restoration&quot;),ISPICKVAL(CH_Email_Type__c, &quot;Restoration&quot;))</errorConditionFormula>
    <errorMessage>A Restore Email can only be send when the case requires a restoration.</errorMessage>
</ValidationRule>