src/objects/EmailMessage/validationRules/CH_Email_NeedsType.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Email_NeedsType</fullName>
    <active>false</active>
    <description>(US:12084) Each outbound Email requires a type when it has one of the CH record types</description>
    <errorConditionFormula>AND(Parent.CreatedDate!=Parent.LastModifiedDate,Parent.CH_RecordTypeCheck__c = TRUE,ISPICKVAL(CH_Email_Type__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Each outbound email needs to have a type</errorMessage>
</ValidationRule>