src/objects/EmailMessage/validationRules/CH_FirstQualifyCIR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_FirstQualifyCIR</fullName>
    <active>true</active>
    <description>(Defect: 14583) Before sending out an email like IR, Restore, (Temp) Sol Prov. A CIR must first be qualified</description>
    <errorConditionFormula>AND(
ISPICKVAL(Parent.Status, &apos;Pending Customer&apos;),
Parent.CH_RecordTypeCheck__c,
OR(
ISPICKVAL(CH_Email_Type__c, &apos;Initial Response&apos;),
ISPICKVAL(CH_Email_Type__c, &apos;Restoration&apos;),
ISPICKVAL(CH_Email_Type__c, &apos;Temporary Solution Provided&apos;),
ISPICKVAL(CH_Email_Type__c, &apos;Solution Provided&apos;),
ISPICKVAL(CH_Email_Type__c, &apos;Cause Analysis Report&apos;),
ISPICKVAL(CH_Email_Type__c, &apos;Service Disruption Report&apos;)
))</errorConditionFormula>
    <errorMessage>Prior to sending out a new email, the existing CIR needs to be qualified. The Email Type &apos;Update&apos; can be used.</errorMessage>
</ValidationRule>