src/objects/EmailMessage/validationRules/CH_IRbeforeCIR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_IRbeforeCIR</fullName>
    <active>true</active>
    <description>An Initial Response has to be provided prior to request a CIR (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Customer Information Request&quot;), 
NOT(Parent.CH_IsCompleteInitialResponse__c) 
)</errorConditionFormula>
    <errorMessage>Please perform an Initial Response prior to requesting a CIR</errorMessage>
</ValidationRule>