src/objects/EmailMessage/validationRules/CH_IRbeforeRestore.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_IRbeforeRestore</fullName>
    <active>true</active>
    <description>An Initial Response has to be provided prior to doing a restore. (Defect: 13241)</description>
    <errorConditionFormula>AND(
Parent.CH_RecordTypeCheck__c,
ISPICKVAL(CH_Email_Type__c,&quot;Restore&quot;),
NOT(Parent.CH_IsCompleteInitialResponse__c)
)</errorConditionFormula>
    <errorMessage>Please perform an Initial Response prior to providing a Restore.</errorMessage>
</ValidationRule>