src/objects/EmailMessage/validationRules/CH_IRbeforeSDR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_IRbeforeSDR</fullName>
    <active>true</active>
    <description>An Initial Response has to be provided prior to an SDR (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Service Disruption Report&quot;), 
NOT(Parent.CH_IsCompleteInitialResponse__c) 
)</errorConditionFormula>
    <errorMessage>Please perform an Initial Response prior to providing an SDR.</errorMessage>
</ValidationRule>