src/objects/EmailMessage/validationRules/CH_IRbeforeSolution.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_IRbeforeSolution</fullName>
    <active>true</active>
    <description>An Initial Response has to be provided prior to a Solution (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Solution Provided&quot;), 
NOT(Parent.CH_IsCompleteInitialResponse__c) 
)</errorConditionFormula>
    <errorMessage>Please perform an Initial Response prior to providing a Solution.</errorMessage>
</ValidationRule>