src/objects/EmailMessage/validationRules/CH_PreventCIR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_PreventCIR</fullName>
    <active>true</active>
    <description>NOKIASC-20255: Need to fill Internal Status before sending CIR</description>
    <errorConditionFormula>AND(Parent.CH_RecordTypeCheck__c,
 ISPICKVAL(CH_Email_Type__c, &apos;Customer Information Request&apos;), 
 NOT( OR (ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Approval&apos; ),
                ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending HW Delivery&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending HW Replacement&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Reoccurence&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Customer Implementation in Progress&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Customer Implementation&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Customer Information&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Work Suspended by Customer&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Remote Access&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Customer Planned MW&apos; ),
				ISPICKVAL(Parent.CH_InternalStatus__c, &apos;Pending Field Service&apos; ))))</errorConditionFormula>
    <errorMessage>Please fill internal status with the correct value before sending CIR.</errorMessage>
</ValidationRule>