src/objects/EmailMessage/validationRules/CH_Restoration_Method_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Restoration_Method_Provided</fullName>
    <active>true</active>
    <description>Restoration Method needs to be provided if Email Type is &quot;Restoration&quot;</description>
    <errorConditionFormula>AND(
ISBLANK(Parent.CH_RestorationMethod__c),
ISPICKVAL(CH_Email_Type__c,&quot;Restoration&quot;)
)</errorConditionFormula>
    <errorDisplayField>CH_Email_Type__c</errorDisplayField>
    <errorMessage>Please fill the restoration method before sending email with restoration type</errorMessage>
</ValidationRule>