src/objects/EmailMessage/validationRules/CH_Restore.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Restore</fullName>
    <active>true</active>
    <description>(US:12084)To ensure that a restore is only provided when the restoration date has not been set</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Parent.CH_SystemRestored__c)),
ISPICKVAL(CH_Email_Type__c,&quot;Restoration&quot;),
NOT(CH_Email_PhoneCall__c)
)</errorConditionFormula>
    <errorMessage>A restore has already been recorded. You can use Email Type &quot;Update&quot; to send additional information.</errorMessage>
</ValidationRule>