src/objects/EmailMessage/validationRules/CH_RestorebeforeSDR.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_RestorebeforeSDR</fullName>
    <active>true</active>
    <description>A Restore has to be provided prior to an SDR (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.CH_RecordTypeCheck__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Service Disruption Report&quot;), 
NOT(Parent.CH_IsCompleteRestore__c)
)</errorConditionFormula>
    <errorMessage>Please perform a Restore prior to providing an SDR.</errorMessage>
</ValidationRule>