src/objects/EmailMessage/validationRules/CH_SDR_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_SDR_Provided</fullName>
    <active>true</active>
    <description>(US:12084)SDR already has been provided</description>
    <errorConditionFormula>AND( 
Parent.CH_IsCompleteServiceDisruptionReport__c, 
ISPICKVAL(CH_Email_Type__c,&quot;Service Disruption Report&quot;)
)</errorConditionFormula>
    <errorMessage>SDR has already been provided. You can use Email Type &quot;Update&quot; to send additional information.</errorMessage>
</ValidationRule>