src/objects/EmailMessage/validationRules/CH_Solution_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Solution_Provided</fullName>
    <active>true</active>
    <description>(US:12084)Solution Provided already has been provided</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Parent.CH_SolutionProvided__c)),
ISPICKVAL(CH_Email_Type__c,&quot;Solution Provided&quot;)
)</errorConditionFormula>
    <errorMessage>Solution has already been provided. You can use Email Type &quot;Update&quot; to send additional information.</errorMessage>
</ValidationRule>