src/objects/EmailMessage/validationRules/CH_SolutionbeforeRestore.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_SolutionbeforeRestore</fullName>
    <active>true</active>
    <description>A Solution can only be provided after a restore has been done (taking into account cases without restore) (Defect: 13241)</description>
    <errorConditionFormula>AND( 
Parent.RecordType.Name = &quot;Nokia Incident with Restoration&quot;, 
ISPICKVAL(CH_Email_Type__c,&quot;Solution Provided&quot;), 
NOT(Parent.CH_IsCompleteRestore__c) 
)</errorConditionFormula>
    <errorMessage>Please perform a Restore prior to providing a Solution.</errorMessage>
</ValidationRule>