src/objects/EmailMessage/validationRules/CH_SolutionEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_SolutionEmpty</fullName>
    <active>true</active>
    <description>(US:12084)Solution is empty</description>
    <errorConditionFormula>AND(
ISPICKVAL(CH_Email_Type__c,&quot;Solution Provided&quot;),
LEN(Parent.CH_SolutionDetails__c) = 0
)</errorConditionFormula>
    <errorMessage>The Solution Field is Empty</errorMessage>
</ValidationRule>