src/objects/EmailMessage/validationRules/CH_SupportEmailAddressinTO.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_SupportEmailAddressinTO</fullName>
    <active>true</active>
    <description>(Defect: NOKIASC-15242) this ensures that emails are not sent from Salesforce back to Salesforce. This validation rule will take into account the CH profiles (Agent, Basic Case Handling and Case Handler)</description>
    <errorConditionFormula>AND(
Parent.CH_RecordTypeCheck__c,
ISPICKVAL(Status, &quot;Sent&quot;),
OR(
ToAddress = &quot;support.servicesdev@nokia.com&quot;,
ToAddress = &quot;support.servicesqa@nokia.com&quot;,
ToAddress = &quot;support.servicesuat@nokia.com&quot;,
ToAddress = &quot;support.services@nokia.com&quot;
),
OR(
$Profile.Name  = &apos;CH_Agent&apos;,
$Profile.Name  = &apos;CH_Basic Case Handling&apos;,
$Profile.Name  = &apos;CH_Case Handler&apos;
))</errorConditionFormula>
    <errorMessage>TO Address cannot be the Nokia Support Email Address</errorMessage>
</ValidationRule>